2007-01-27 15:46  acmihal

	* README, doc/enblend.1: Updated README and man page for 3.0
	  release.

2007-01-27 15:17  acmihal

	* TODO, src/enblend.cc, src/mask.h, src/numerictraits.h: Enabled
	  all pixel types.  Bugfix for fixed-point overflow.  Fixed cost
	  image functor for unsigned pixel component types.

2007-01-27 15:17  acmihal

	* include/vigra/cachedfileimage.hxx: Removed minimum limit on image
	  lines per cache block.

2007-01-27 00:42  acmihal

	* src/: enblend.cc, mask.h, numerictraits.h: Bugfix for cost image
	  calculation for 16-bit images.

2007-01-26 23:05  acmihal

	* src/assemble.h: Changed assemble alpha threshold to max/2 < alpha
	  <= max.

2007-01-26 21:00  acmihal

	* .cvsignore, TODO, VIGRA_LICENSE, configure.in,
	  include/.cvsignore, include/vigra/.cvsignore,
	  include/vigra/Makefile.am, include/vigra/accessor.hxx,
	  include/vigra/affinegeometry.hxx, include/vigra/array_vector.hxx,
	  include/vigra/basicgeometry.hxx, include/vigra/basicimage.hxx,
	  include/vigra/basicimageview.hxx,
	  include/vigra/bordertreatment.hxx,
	  include/vigra/boundarytensor.hxx,
	  include/vigra/cachedfileimage.hxx, include/vigra/codec.hxx,
	  include/vigra/colorconversions.hxx,
	  include/vigra/combineimages.hxx, include/vigra/config.hxx,
	  include/vigra/contourcirculator.hxx,
	  include/vigra/convolution.hxx, include/vigra/copyimage.hxx,
	  include/vigra/cornerdetection.hxx, include/vigra/diff2d.hxx,
	  include/vigra/distancetransform.hxx,
	  include/vigra/edgedetection.hxx, include/vigra/eigensystem.hxx,
	  include/vigra/error.hxx, include/vigra/extraimagetraits.hxx,
	  include/vigra/fftw.hxx, include/vigra/fftw3.hxx,
	  include/vigra/fixedpoint.hxx, include/vigra/flatmorphology.hxx,
	  include/vigra/functorexpression.hxx,
	  include/vigra/functortraits.hxx, include/vigra/gaborfilter.hxx,
	  include/vigra/gaussians.hxx,
	  include/vigra/gradient_energy_tensor.hxx,
	  include/vigra/imagecontainer.hxx, include/vigra/imageinfo.hxx,